copy_file_range: truncate write if it would exceed RLIMIT_FSIZE

PR:		266611
Reviewed by:	kib
Differential Revision: https://reviews.freebsd.org/D36706

(cherry picked from commit 52360ca32ff90b605ac7481fd79e6a251e8b5116)